--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,27 +1,128 @@
+/* Minimal CSS Reset */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5%;
+  /* Set 1rem = 10px for easier rem calculations */
+}
+
+/* Tailwind base, components, and utilities */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #1d214e;
+body {
+  font-size: 1.6rem;
+  /* Set base font size to 16px */
+  line-height: 1.6;
+  font-family: var(--font-body);
+  /* Body font stack */
 }
 
-/* @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-} */
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+/* Font settings for headers */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--font-heading);
+  /* Header font stack */
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+}
+
+@layer base {
+  :root {
+    /* Shades of Blue */
+    --blue-50: 228 12% 92%;
+    --blue-100: 220 11% 74%;
+    --blue-200: 221 11% 61%;
+    --blue-300: 220 15% 43%;
+    --blue-400: 221 25% 32%;
+    --blue-500: 220 65% 15%;
+    --blue-600: 221 65% 13%;
+    --blue-700: 219 66% 10%;
+    --blue-800: 220 66% 8%;
+    --blue-900: 220 68% 6%;
+
+    /* Shades of Teal */  
+    --teal-50: 180 36% 95%;
+    --teal-100: 184 38% 85%;
+    --teal-200: 184 38% 77%;
+    --teal-300: 185 38% 67%;
+    --teal-400: 185 38% 61%;
+    --teal-500: 184 38% 51%;
+    --teal-600: 184 37% 46%;
+    --teal-700: 184 37% 36%;
+    --teal-800: 183 37% 28%;
+    --teal-900: 185, 37% 21%;
+
+    /* Shades of Brown */
+    --brown-50: 30 50% 95%;
+    --brown-100: 32 48% 83%;
+    --brown-200: 32 48% 74%;
+    --brown-300: 32 49% 63%;
+    --brown-400: 32 49% 55%;
+    --brown-500: 32 62% 44%;
+    --brown-600: 32 62% 40%;
+    --brown-700: 31 61% 31%;
+    --brown-800: 32 61% 24%;
+    --brown-900: 32 62% 18%;
+
+    --background: 0 0% 100%;
+    --foreground: var(--blue-900);
+    --card: 0 0% 100%;
+    --card-foreground: 0 0% 3.9%;
+    --popover: 0 0% 100%;
+    --popover-foreground: 0 0% 3.9%;
+    --primary: var(--blue-500);
+    --primary-foreground: 0 0% 98%;
+    --secondary: 0 0% 96.1%;
+    --secondary-foreground: 0 0% 9%;
+    --muted: 0 0% 96.1%;
+    --muted-foreground: 0 0% 45.1%;
+    --accent: 0 0% 96.1%;
+    --accent-foreground: 0 0% 9%;
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 0 0% 98%;
+    --border: var(--blue-500);
+    --input: var(--blue-500);
+    --ring: 0 0% 3.9%;
+    --chart-1: 12 76% 61%;
+    --chart-2: 173 58% 39%;
+    --chart-3: 197 37% 24%;
+    --chart-4: 43 74% 66%;
+    --chart-5: 27 87% 67%;
+    --radius: 0.5rem;
+    --font-body: var(--font-body);
+    --font-heading: var(--font-heading);
+  }
+}
+
+@layer base {
+  * {
+    @apply border-border;
+  }
+
+  body {
+    @apply bg-background text-foreground font-body;
+  }
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    @apply font-heading;
   }
 }
