--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,29 +1,12 @@
-/* Minimal CSS Reset */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-html {
-  font-size: 62.5%;
-  /* Set 1rem = 10px for easier rem calculations */
-}
-
 /* Tailwind base, components, and utilities */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
-  font-size: 1.8rem;
-  /* Set base font size to 16px */
-  line-height: 1.8;
   font-family: var(--font-body);
-  /* Body font stack */
 }
 
-/* Font settings for headers */
 h1,
 h2,
 h3,
@@ -31,7 +14,6 @@ h4,
 h5,
 h6 {
   font-family: var(--font-heading);
-  /* Header font stack */
 }
 
 @layer utilities {
@@ -86,11 +68,11 @@ h6 {
     --popover-foreground: 0 0% 3.9%;
     --primary: var(--blue-500);
     --primary-foreground: 0 0% 98%;
-    --secondary: 0 0% 96.1%;
+    --secondary: var(--blue-50);
     --secondary-foreground: 0 0% 9%;
-    --muted: 0 0% 96.1%;
+    --muted: var(--blue-50);
     --muted-foreground: 0 0% 45.1%;
-    --accent: 0 0% 96.1%;
+    --accent: var(--blue-50);
     --accent-foreground: 0 0% 9%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
@@ -114,7 +96,7 @@ h6 {
   }
 
   body {
-    @apply bg-background text-foreground font-body;
+    @apply bg-background text-foreground;
   }
 
   h1,
